--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
         .pageSet {
             position: absolute;
             inset: 0;
+            display: none;
             font-size: 20px;
             font-weight: 700;
             background: rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(4px);
+            
             z-index: 999;
         }
 
@@ -245,7 +247,7 @@
     // 页面数据初始化
     function dataInit() {
         names = JSON.parse(localStorage.getItem("namesArr"))
-        if (names.length === 0) {
+        if (names === null && names.length === 0) {
             alert("当前无数据，请点击卡片右上角设置图标新增数据")
         } else {
             pageSetContentEl.innerHTML = ""
