提ç升代码兼容性

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             letter-spacing: 4vh;
             text-indent: 4vh;
             user-select:none;
+            -webkit-user-select: none;
         }
 
         .container > .set {
@@ -57,6 +58,7 @@
             font-size: 2vw;
             cursor: pointer;
             user-select:none;
+            -webkit-user-select: none;
         }
 
         .pageSet {
@@ -67,9 +69,11 @@
             font-weight: 700;
             background: rgba(0, 0, 0, 0.4);
             backdrop-filter: blur(4px);
-            
+            -webkit-backdrop-filter: blur(4px)
+
             z-index: 999;
             user-select:none;
+            -webkit-user-select: none;
         }
 
         .pageSet > .arrContainer {
@@ -137,6 +141,7 @@
                 transform: rotate(90deg);
                 font-size: 10vh;
                 user-select:none;
+                -webkit-user-select: none;
             }
 
             .container > .set {
